xatoliklar tuzatildi
